# truck-ontology-bench

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: 01-fabric-iq-primer.md  02-repo-tour.md  03-walkthrough.md  04-schema-reference.md  05-troubleshooting.md  README.md
gql-queries/: README.md  cq01.gql  cq02.gql  cq03.gql  cq04.gql  cq05.gql  cq06.gql  cq07.gql  cq08.gql  cq09.gql  cq10.gql  cq11.gql
notebooks/: compare_agents_fabric.ipynb
scenarios/: README.md  truck_scenarios.json
scripts/: 01_parse_md.py  02_build_mapping.py  03_setup.py  04_refresh_and_validate.py  05_setup_agents.py  06_score.py  _build_notebook.py
src/truck_bench/: __init__.py
src/truck_bench/agents/: __init__.py  instructions.py  provision.py
src/truck_bench/fabric_client/: __init__.py  auth.py  config.py  data_agent_api.py  definition_builder.py  graph_api.py  lakehouse_sync.py  livy_api.py  lro.py  ontology_api.py
src/truck_bench/mapping/: __init__.py  md_to_fabric.py
src/truck_bench/markdown_parser/: __init__.py  model.py  parser.py
src/truck_bench/scoring/: __init__.py  evaluator.py  scenarios.py
tests/: conftest.py  test_agent_wiring.py  test_evaluator.py  test_fabric_client.py  test_mapping.py  test_markdown_parser.py  test_scorer_lock.py
