[project]
name = "truck-bench"
version = "0.1.0"
description = "Long-haul trucking ontology benchmark in Microsoft Fabric"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "hzmarrou" }]
keywords = [
    "fabric",
    "microsoft-fabric",
    "ontology",
    "knowledge-graph",
    "data-agent",
    "gql",
    "benchmark",
]
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "tabulate>=0.9",
]

[project.urls]
Homepage = "https://github.com/hzmarrou/truck-ontology-bench"
Issues = "https://github.com/hzmarrou/truck-ontology-bench/issues"
Documentation = "https://github.com/hzmarrou/truck-ontology-bench/tree/main/docs"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/truck_bench"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
